--- a/src/app/modules/ecommerce-auth/checkout-payment/checkout-payment.component.html
+++ b/src/app/modules/ecommerce-auth/checkout-payment/checkout-payment.component.html
@@ -2,8 +2,8 @@
 <div class="container">
     <div class="breadcrumbs">
         <a href="index-1.html"><i class="las la-home"></i></a>
-        <a href="#">Shop</a>
-        <a href="#" class="active">Checkout</a>
+        <a href="#">Comprar</a>
+        <a href="#" class="active">Proceso de compra</a>
     </div>
 </div>
 
