--- a/src/app/modules/ecommerce-auth/shopping-carts/shopping-carts.component.html
+++ b/src/app/modules/ecommerce-auth/shopping-carts/shopping-carts.component.html
@@ -118,7 +118,7 @@
                         <button (click)="applyCupon()">apply</button>
                     </div>
                     <div class="cart_sum_pros">
-                        <button>Proccees to checkout</button>
+                        <a routerLink="/proceso-de-pago" class="btn btn btn-danger">Procesar Pago</a>
                     </div>
                 </div>
             </div>
