--- a/src/app/modules/ecommerce-auth/profile-client/orders-review-add-clients/orders-review-add-clients.component.html
+++ b/src/app/modules/ecommerce-auth/profile-client/orders-review-add-clients/orders-review-add-clients.component.html
@@ -4,7 +4,7 @@
         <div class="col-md-6">
             <div class="d-flex align-items-center">
                 <div class="orderprod_img">
-                    <img loading="lazy" [src]="sale_detail.product.imagen" alt="product">
+                    <img loading="lazy" src="{{URL_BACKEND+sale_detail.product.imagen}}" alt="product">
                 </div>
                 <div class="single_orderdet pdname">
                     <h5>{{ sale_detail.product.title }}</h5>
