--- a/src/app/modules/ecommerce-auth/profile-client/profile-information/profile-information.component.html
+++ b/src/app/modules/ecommerce-auth/profile-client/profile-information/profile-information.component.html
@@ -55,7 +55,7 @@
                             <label class="custom-file-label" for="customFile">Choose file</label>
                         </div>
                         <div class="col-12 py-2" *ngIf="imagen_previzualiza">
-                            <img [src]="imagen_previzualiza" class="w-100" alt="">
+                            <img src="{{imagen_previzualiza}}" class="w-100" alt="">
                         </div>
                     </div>
                 </div>
