--- a/src/app/modules/home/lists-filter-products/lists-filter-products.component.html
+++ b/src/app/modules/home/lists-filter-products/lists-filter-products.component.html
@@ -174,7 +174,7 @@
                                         <div class="list_product_img">
                                             <div class="lp_img">
                                                 <a [href]="'/producto/'+product.slug">
-                                                    <img loading="lazy" [src]="product.imagen" alt="product">
+                                                    <img loading="lazy" src="{{URL_BACKEND+product.imagen}}" alt="product">
                                                 </a>
                                             </div>
                                         </div>
