--- a/src/app/shared/c-detail-product/c-detail-product.component.html
+++ b/src/app/shared/c-detail-product/c-detail-product.component.html
@@ -6,12 +6,12 @@
         <div class="col-lg-6">
             <div class="product_view_slider">
                 <div class="single_viewslider" *ngFor="let imagen of product_selected_modal.images">
-                    <img loading="lazy" [src]="imagen.imagen" alt="product">
+                    <img loading="lazy" src="{{URL_BACKEND+imagen.imagen}}" alt="product">
                 </div>
             </div>
             <div class="product_viewslid_nav">
                 <div class="single_viewslid_nav" *ngFor="let imagen of product_selected_modal.images">
-                    <img loading="lazy" [src]="imagen.imagen" alt="product">
+                    <img loading="lazy" src="{{URL_BACKEND+imagen.imagen}}" alt="product">
                 </div>
             </div>
         </div>
