--- a/src/app/modules/ecommerce-auth/profile-client/orders-clients/orders-clients.component.html
+++ b/src/app/modules/ecommerce-auth/profile-client/orders-clients/orders-clients.component.html
@@ -1,9 +1,13 @@
-<div class="acorder_wrapper">
+<div class="acorder_wrapper" style="height:500px; overflow-y: scroll;">
     <ng-container *ngFor="let order of listOrders">
         <div class="single_prof_recorder mt-0 mb-4 shadow_sm">
             <div class="prorder_img">
                 <ng-container *ngFor="let item of order.items">
-                    <img loading="lazy" [src]="item.imagen" alt="product">
+                    <img loading="lazy" src="{{URL_BACKEND+item.imagen}}" alt="product">
+                    <div class="prorder_txt prorder_qnty d-none d-sm-block">
+                        <h5>Cantidad</h5>
+                        <p>x{{ item.cantidad }}</p>
+                    </div>
                 </ng-container>
 
                 <!-- <img loading="lazy"  src="assets/images/tv.png" alt="product"> -->
@@ -19,18 +23,15 @@
                 <h5>Fecha</h5>
                 <p>{{ order.created_at }}</p>
             </div>
-            <div class="prorder_txt prorder_qnty d-none d-sm-block">
-                <h5>Cantidad</h5>
-                <p>x{{ order.cantidad }}</p>
-            </div>
-            <div class="prorder_txt prorder_total">
-                <h5>Total</h5>
-                <p>{{ order.total }} {{ order.currency_payment }}</p>
-            </div>
+           
             <div class="prorder_txt prorder_status">
                 <h5 class="d-none d-md-block">Metodo:</h5>
                 <!-- <h5 class="d-block d-md-none"><span class="text_md me-2">Qty: x3</span> $120</h5> -->
                 <p style="color : blue">{{ order.method_payment }}</p>
+            </div>
+            <div class="prorder_txt prorder_total">
+                <h5>Total</h5>
+                <p>{{ order.total }} {{ order.currency_payment }}</p>
             </div>
         </div>
     </ng-container>
